# SpecPainter

./: .gitignore  README.md
spc/: CMakeLists.txt  build.sh
spc/src/: main.c
spc/src/lib/miniz/: miniz.c  miniz.h
spc/src/utils/png/: png.c  png.h
